// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button On a contrast area 1`] = `
<div
  className="sc-jTzLTM hDWBpv"
>
  <div
    className="sc-bwzfXH gMUFIw"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="sc-bwzfXH lalwsM"
      >
        <div
          className="sc-bwzfXH hwWvSq"
        >
          <button
            className="sc-htoDjs kebeYM"
            color={undefined}
            disabled={false}
            icon={undefined}
            id={undefined}
            onClick={[Function]}
            title="Click me"
            type="button"
          >
            Click me
          </button>
        </div>
        <div
          className="sc-bwzfXH hwWvSq"
        >
          <button
            className="sc-htoDjs hnwWMx"
            color={undefined}
            disabled={undefined}
            icon={undefined}
            id={undefined}
            onClick={[Function]}
            title="Click me"
            type="button"
          >
            <span
              aria-hidden={true}
              className="sc-iwsKbI jSMqMr"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "test-file-stub",
                }
              }
              role="img"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button With an icon 1`] = `
<button
  className="sc-htoDjs leTIcc"
  color={undefined}
  disabled={false}
  icon="keyboard"
  id={undefined}
  onClick={[Function]}
  title="Press any key to continue"
  type="button"
>
  Press any key to continue
  <span
    className="sc-htpNat cBWndZ"
  >
    <span
      aria-hidden={true}
      className="sc-iwsKbI jSMqMr"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
  </span>
</button>
`;

exports[`Storyshots Button With text 1`] = `
<button
  className="sc-htoDjs kwPcoU"
  color={undefined}
  disabled={false}
  icon={undefined}
  id={undefined}
  onClick={[Function]}
  title="Click me"
  type="button"
>
  Click me
</button>
`;
